<resources>
    <string name="app_name">SIM</string>
    <string name="title_activity_main">SnT Inspection Management(SIM)</string>
    <string name="app_short_name">SIM</string>
    <string name="nwrlogo">nwrlogo</string>
    <string name="division_name">Division</string>
    <string name="date_of_inspection">Date of Inspection</string>
    <string name="enter_date_of_inspection">Enter Date of Inspection</string>
    <string name="station_code">Station</string>
    <string name="enter_station_code">Enter Station Code</string>
    <string name="inspecting_authority">Inspecting Authority</string>
    <string name="officer_name">Name</string>
    <string name="officer_designation">Designation</string>
    <string name="proceed">Proceed</string>
    <string name="general">general</string>
    <string name="general_telecom">General/Telecom</string>
    <string name="tile">tile</string>
    <string name="name_of_on_duty_satation_master">name of on duty satation master</string>
    <string name="name_of_on_duty_station_master">Name of On-duty Station Master</string>
    <string name="station_master">Station Master</string>
    <string name="sm_s_key_was_found_in_working_order">SM\'s Key was found in working order</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="checking_the_telecom_installations_in_sm_s_room">Checking the Telecom Installations in SM\'s Room</string>
    <string name="vhf_set">VHF Set</string>
    <string name="crank_handle_testing_by_sm_and_pointsman">Crank Handle Testing by SM and Pointsman</string>
    <string name="submit">Save</string>
    <string name="km_no_of_socket_and_deficiencies_if_any">KM No. of Socket and Deficiencies (if any)</string>
    <string name="emergency_sockets_tested_if_any">Emergency Sockets Tested (If any)</string>
    <string name="any_other_deficiencies">Any Other Deficiencies</string>
    <string name="not_found">Not Found</string>
    <string name="found">Found</string>
    <string name="earth_termination">Earth Termination</string>
    <string name="maintained_battery_readings_record">Maintained Battery Readings Record</string>
    <string name="not_ok">Not OK</string>
    <string name="ok">OK</string>
    <string name="status_of_digital_equipments">Status of Digital Equipments</string>
    <string name="v">V</string>
    <string name="total_battery_voltage">Total Battery Voltage</string>
    <string name="ofc_hut">OFC HUT</string>
    <string name="ch_tested">CH Tested</string>
    <string name="points_tested">Points Tested</string>
    <string name="date_of_testing">Date Of Testing</string>
    <string name="pa_system">PA System</string>
    <string name="vhf_repeater">VHF Repeater</string>
    <string name="railway_cug_bsnl_phone">Railway/ CUG/ BSNL Phone</string>
    <string name="control_phone_both_ofc_and_quad">Control Phone(Both OFC and Quad)</string>
    <string name="point_doesn_t_get_operated_when_point_zone_tr_is_dropped">Point doesn\'t get operated when point zone TR is dropped</string>
    <string name="point_does_not_stop_when_point_zone_tr_is_dropped_during_point_operation">Point does not stop when point zone TR is dropped during point operation</string>
    <string name="opening_of_point_is_around_115mm_shall_not_be_less_than_95mm_in_any_case">Opening of point is around 115mm (shall not be less than 95mm in any case)</string>
    <string name="filler_gauge_shall_be_in_between_1mm_to_3mm">Filler gauge (shall be in between 1mm to 3mm)</string>
    <string name="records_of_point_maintenance_were_maintained_and_were_placed_in_respective_point_machines">Records of point maintenance were maintained and were placed in respective Point machines</string>
    <string name="any_deficiency_found">Any Deficiency Found</string>
    <string name="ensure_the_following">Ensure the Following</string>
    <string name="details_of_points_with_obstruction_voltage_less_than_80_v">Details of points with obstruction voltage less than 80 V</string>
    <string name="obstruction_current_should_be_1_5_to_2_times_of_the_normal_operating_current_or_difference_of_both_currents_shall_be_less_than_0_5_a_if_not_name_such_points">Obstruction current should be 1.5 to 2 times of the normal operating current or difference of both currents shall be less than 0.5 A. If not, Name such points</string>
    <string name="points_which_either_gets_locked_or_detection_contacts_make_during_5mm_obstruction_test">Points which either gets locked or detection contacts make during 5mm obstruction test</string>
    <string name="last_joint_point_and_crossings_inspection">Last Joint Point and Crossings inspection</string>
    <string name="select_date">Select Date</string>
    <string name="any_deficiency_to_be_attended">Any Deficiency to be attended</string>
    <string name="double_bonding_has_been_done_on_all_the_continuous_rail_joints_and_sejs">Double Bonding has been done on all the Continuous Rail Joints and SEJs</string>
    <string name="j_type_pandrol_clip_has_been_used_at_glued_joints_to_avoid_shorting_of_tc">\'J\' type pandrol clip has been used at Glued Joints to avoid Shorting of TC.</string>
    <string name="when_both_rails_are_shorted_using_tsr_tc_indication_on_panel_is_red_including_track_circuited_sidings">When Both rails are shorted using TSR, TC indication on panel is red including track circuited sidings.</string>
    <string name="specific_gravity_of_tc_battery_is_in_between_1180_1220">Specific Gravity of TC battery is in between 1180–1220</string>
    <string name="relay_end_voltage_is_less_than_3_times_of_pick_up_voltage_of_tr_qt2_qta2_type">Relay End Voltage is less than 3 times of Pick Up voltage of TR (QT2/QTA2 Type)</string>
    <string name="type_of_interlocking">Type of Interlocking</string>
    <string name="sip_swrd_is_as_per_the_physical_yard_layout">SIP/SWRD is as per the physical yard layout</string>
    <string name="counters_on_panel_vdu_are_same_as_recorded_in_counter_register">Counters on Panel/VDU are same as recorded in Counter Register</string>
    <string name="sample_checking_of_calling_on_signal_coggb_counter_increment">Sample checking of Calling ON Signal (COGGB Counter increment)</string>
    <string name="sample_checking_of_calling_on_signal_cancellation_cocyn_errb_counter_increment">Sample checking of Calling ON Signal Cancellation (COCYN/ERRB Counter Increment)</string>
    <string name="testing_of_emergency_classover_in_double_line_sections">Testing of Emergency Crossover (in double line sections)</string>
    <string name="sample_check_of_approach_locking_dead_approach_locking">Sample check of Approach Locking/Dead Approach Locking</string>
    <string name="counter_details">Counter Details</string>
    <string name="errb">ERRB</string>
    <string name="rrbu">RRBU</string>
    <string name="records_of_tc_parameters_were_maintained_and_placed_in_respective_location_boxes">Records of TC parameters were maintained and placed in respective location boxes</string>
    <string name="coggn">COGGN</string>
    <string name="ech">ECH</string>
    <string name="last_annual_panel_testing_date">Last Annual Panel testing Date</string>
    <string name="signal_lamp_voltae_90_of_rated_value"><![CDATA[Signal lamp voltage < 90% of rated value]]></string>
    <string name="vecr_drops_with_fusing_of_minimum_3_route_leds">UECR drops with fusing of minimum 3 route LEDS</string>
    <string name="signal_failure_register_last_3_months_failures">Signal Failure Register (last 3 months failures)</string>
    <string name="month">Month</string>
    <string name="point">Point</string>
    <string name="track_circuit">Track Circuit</string>
    <string name="bi_bpac">BI/BPAC</string>
    <string name="power_supply">Power Supply</string>
    <string name="others">Others</string>
    <string name="remarks">Remarks</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="d_r">D/R</string>
    <string name="disconnection_and_reconnection_reister_last_3_months">Disconnection and Reconnection Register (last 3 months)</string>
    <string name="relay_room_opening_register_last_3_months">Relay Room Opening Register (last 3 months)</string>
    <string name="signal_infringement_register">Signal Infringement Register</string>
    <string name="found_not_updated">Found (Not updated)</string>
    <string name="found_and_updated">Found and Updated</string>
    <string name="cable_meggering_record">Cable Meggering Record</string>
    <string name="earth_testing_record">Earth Testing Record</string>
    <string name="smc_12">SMC 12</string>
    <string name="signal_history_book">Signal History Book</string>
    <string name="rr_opening">RR Opening</string>
    <string name="engineering_deficiencies">Engineering Deficiency</string>
    <string name="deficiency_found">Deficiency Found</string>
    <string name="action_by">Action By</string>
    <string name="electrical_deficiency">Electrical Deficiency</string>
    <string name="deficiencies_of_other_department">Deficiencies of Other Department</string>
    <string name="gate_no">Gate No.</string>
    <string name="name_of_gateman">Name of Gateman</string>
    <string name="gate_type">Gate Type</string>
    <string name="positive_boom_locking_tested">Positive Boom Locking tested</string>
    <string name="booms_were_painted">Booms were painted</string>
    <string name="gateman_having_adequate_safety_knowledge">Gateman having adequate safety knowledge</string>
    <string name="sse_je_inspections_are_as_per_their_maintenance_schedule">SSE/JE inspections are as per their maintenance schedule</string>
    <string name="inspection_maintenance_records_were_maintained">Inspection/Maintenance Records were maintained</string>
    <string name="other_electrical_and_mechanical_parameter_of_gates_were_checked">Other Electrical and Mechanical parameter of gates were checked</string>
    <string name="add_gate">Add Gate</string>
    <string name="gate_telephone_s_found_in_working_order">Gate telephone(s) found in working order</string>
    <string name="submit_and_generate_inspection_note">Submit and Generate Inspection Note</string>
    <string name="smc_1_11">SMC 1 – 11</string>
    <string name="updated_circuit_diagrams_were_availabble">Updated Circuit Diagrams were available</string>
    <string name="cable_route_plan">Cable Route Plan</string>
    <string name="cable_core_chart">Cable Core Chart</string>
    <string name="download_inspection_notes">Download Inspection Notes</string>
    <string name="log_out">Log Out</string>
    <string name="about_developer">About Developer</string>
    <string name="about_it_center_nwr">About IT Center, NWR</string>
    <string name="register_a_user">Register a User</string>
    <string name="aashish_periwal_is_an_s_t_officer_of_irsse_2014_batch_and_is_currently_working_as_asa_it_in_it_center_nwr_he_has_previously_worked_as_adste_jodhpur"><![CDATA[Aashish Periwal is an S&T Officer of IRSSE-2014 Batch and is currently working as ASA/IT in IT Center, NWR. He has previously worked as ADSTE/Jodhpur.]]></string>
    <string name="aashish_periwal_asa_it">Aashish Periwal (ASA/IT)</string>
    <string name="jai_pal_singh">Jai Pal Singh</string>
    <string name="iiit_kota_mentor_mnit_jaipur">(IIIT Kota, Mentor MNIT, Jaipur)</string>
    <string name="jai_pal_singh_is_a_quality_oriented_full_stack_android_and_web_engineer_he_can_make_your_vision_a_reality_he_excels_in_java_kotlin_html_css_javascript_sqlite_mysql_oracle_json_xml_php">Jai Pal Singh is a quality-oriented full stack Android and Web Engineer. He can make your vision a reality. He excels in Java, Kotlin, HTML, CSS, JavaScript, SQLite, MySQL, Oracle, JSON, XML, PHP.</string>
    <string name="contact">Contact -</string>
    <string name="email">Email :</string>
    <string name="jai_pal_2013_gmail_com">jai.pal.2013@gmail.com</string>
    <string name="linkedin">LinkedIn :</string>
</resources>