<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/color_background">

    <LinearLayout
        android:id="@+id/levelCrossingLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/levelCrossingLayout11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/levelCrossingLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/gateNoTextView"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/gate_no"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/gateNoEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:background="@drawable/edittext_border"/>
            </LinearLayout>

            <EditText
                android:id="@+id/SMeditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/name_of_gateman"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/levelCrossingLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/gateTypeTextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/gate_type"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/gateTypeSpinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:entries="@array/gateType"
                    android:minHeight="30dp"
                    android:background="@drawable/edittext_border" />
            </LinearLayout>

            <TextView
                android:id="@+id/EnsureTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/ensure_the_following"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/positive_boomCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/positive_boom_locking_tested"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/booms_were_paintedCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/booms_were_painted"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/gatemanCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/gateman_having_adequate_safety_knowledge"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/gateTelephoneCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/gate_telephone_s_found_in_working_order"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/sse_je_inspectionsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/sse_je_inspections_are_as_per_their_maintenance_schedule"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/inspection_maintenanceCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/inspection_maintenance_records_were_maintained"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/other_electrical_and_mechanicalCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/other_electrical_and_mechanical_parameter_of_gates_were_checked"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/levelCrossingDeficiencyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/any_deficiency_found"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:minLines="4"
                android:padding="5dp"
                android:scrollbars="vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2" />
            <Button
                android:id="@+id/addGateButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginEnd="10dp"
                android:text="@string/add_gate"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/levelCrossingSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/submit"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>