<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:layout_margin="5dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relay1"
        android:padding="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/EnsureTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/ensure_the_following"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/doubleBondingCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EnsureTextView"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/double_bonding_has_been_done_on_all_the_continuous_rail_joints_and_sejs"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/JTypeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/doubleBondingCheckBox"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/j_type_pandrol_clip_has_been_used_at_glued_joints_to_avoid_shorting_of_tc"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/bothRailsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/JTypeCheckBox"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/when_both_rails_are_shorted_using_tsr_tc_indication_on_panel_is_red_including_track_circuited_sidings"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/specificGravityCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bothRailsCheckBox"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/specific_gravity_of_tc_battery_is_in_between_1180_1220"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/relayEndVoltageCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/specificGravityCheckBox"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/relay_end_voltage_is_less_than_3_times_of_pick_up_voltage_of_tr_qt2_qta2_type"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/recordsTCCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relayEndVoltageCheckBox"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/records_of_tc_parameters_were_maintained_and_placed_in_respective_location_boxes"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tracksDeficiencyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/recordsTCCheckBox"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/any_deficiency_found"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:minLines="4"
            android:padding="5dp"
            android:scrollbars="vertical" />

        <LinearLayout
            android:id="@+id/trackCircuitsLinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/tracksDeficiencyEditText"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trackCircuitsActionByTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/action_by"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/trackCircuitsActionBySpinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="27dp"
                android:entries="@array/jaipurActionBy"
                android:background="@drawable/edittext_border" />
        </LinearLayout>

        <EditText
            android:id="@+id/trackCircuitsActionByEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trackCircuitsLinearLayout1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/officer_designation"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/tracksSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/trackCircuitsActionByEditText"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/submit"
            android:onClick="saveTrackCircuitsData"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>